Update return format for endpoints
