# routes/index.ts
@@ -1,6 +1,7 @@
 import express from "express";
 import PingController from "../controllers/ping";
 import MarvelController from "../controllers/marvel";
+import CharacterDataWrapper, { CharacterIds, CharacterReturn } from "../src/dto/models/marvel-character";
 const status = require('http-status');
 
 const router = express.Router();
@@ -13,14 +14,15 @@ router.get("/ping", async (_req, res) => {
 
 router.get("/marvel/characters", async(_req, res) => {
     const controller = new MarvelController();
-    const response = await controller.getCharacters();
+    const response: CharacterIds = await controller.getCharacters();
+    console.log(response.length);
     res.status(status.OK).json(response);
 });
 
 router.get("/marvel/characters/:id", async (req, res) => {
     const { id } = req.params;
     const controller = new MarvelController();
-    const response = await controller.getCharacterById(id);
+    const response: CharacterReturn = await controller.getCharacterById(id);
     res.status(status.OK).json(response);
 });
 
