# src/dto/models/marvel-character.ts
@@ -76,10 +76,10 @@ interface CharacterDataContainer {
     limit?: number;
     total?: number;
     count?: number;
-    result?: Array<Character>;
+    results?: Array<Character>;
 }
 
-interface Character {
+export interface Character {
     id?: number;
     name?: string;
     description?: string;
@@ -92,5 +92,34 @@ interface Character {
     events?: EventList;
     series?: SeriesList;
 }
+
+export type CharacterReturn = Pick<Character, "id" | "name" | "description">;
+export type CharacterIds = Array<Pick<Character, "id">>;
+
+export const toCharacterReturn = (wrapper: CharacterDataWrapper): CharacterReturn => {
+    let characterReturn: CharacterReturn = {};
+    if (wrapper?.data?.results && wrapper?.data?.results.length > 0) {
+        const character: Character = wrapper.data.results[0];
+        
+        characterReturn = {
+            id: character.id,
+            name: character.name,
+            description: character.description,
+        };
+    }
+
+    return characterReturn;
+};
+
+export const extractCharacterIds = (wrapper: CharacterDataWrapper): CharacterIds => {
+    let characterIds: CharacterIds = [];
+    if (wrapper?.data?.results && wrapper?.data?.results.length > 0) {
+        characterIds = wrapper.data.results.map((character) => ({
+            id: character.id,
+        }));
+    }
+
+    return characterIds;
+};
 
 export default CharacterDataWrapper;
